syntax = "proto3";

package hnclone;

option java_multiple_files = true;
option java_package = "com.asadmshah.hnclone.models";
option optimize_for = LITE_RUNTIME;

message CommentScore {
    uint32 post_id = 1;
    uint32 comment_id = 2;
    int32 score = 3;
}