syntax = "proto3";

package hnclone;

import "comment.proto";
import "comment_score.proto";

option java_multiple_files = true;
option java_package = "com.asadmshah.hnclone.services";
option optimize_for = LITE_RUNTIME;

service CommentsService {
    rpc Create (CommentCreateRequest) returns (Comment);
    rpc Read (CommentReadRequest) returns (Comment);
    rpc ReadListFromPost (CommentReadListFromPostRequest) returns (stream Comment);
    rpc ReadListFromComment (CommentReadListFromCommentRequest) returns (stream Comment);
    rpc VoteIncrement (CommentVoteIncrementRequest) returns (CommentScoreResponse);
    rpc VoteDecrement (CommentVoteDecrementRequest) returns (CommentScoreResponse);
    rpc VoteRemove (CommentVoteRemoveRequest) returns (CommentScoreResponse);

    rpc CommentStream (CommentStreamRequest) returns (stream Comment);
    rpc CommentScoreStream (CommentScoreStreamRequest) returns (stream CommentScore);
}

message CommentCreateRequest {
    uint32          post_id         = 1;
    uint32          comment_id      = 2;
    string          text            = 3;
}

message CommentReadRequest {
    uint32          post_id         = 1;
    uint32          comment_id      = 2;
}

message CommentReadListFromPostRequest {
    uint32          post_id         = 1;
}

message CommentReadListFromCommentRequest {
    uint32          post_id         = 1;
    uint32          comment_id      = 2;
}

message CommentVoteIncrementRequest {
    uint32          id      = 1;
}

message CommentVoteDecrementRequest {
    uint32          id      = 1;
}

message CommentVoteRemoveRequest {
    uint32          id      = 1;
}

message CommentScoreResponse {
    uint32          id      = 1;
    int32          score   = 2;
    int32           voted = 3;
}

message CommentStreamRequest {
    uint32      post_id     = 1;
}

message CommentScoreStreamRequest {
    uint32      post_id     = 1;
}